# soundwave

./: .gitignore  LICENSE  README.md  main.py  mise.toml  pyproject.toml
.moon/: toolchain.yml  workspace.yml
.moon/tasks/: node.yml  tag-vite.yml  tag-vitest.yml
docs/diagrams/: Data Flow Diagram Playing a Song via NFC.mmd  Data Flow Diagram: Adding a New Song.mmd  Hardware Wiring Diagram.mmd  Software & Network Architecture.mmd  System Architecture Diagram.mmd
esp/: .clang-format  CMakeLists.txt  sdkconfig  sdkconfig.old
esp/main/: CMakeLists.txt  soundwave_adc.c  soundwave_main.c  soundwave_spi.c
esp/main/include/: soundwave.h  soundwave_adc.h  soundwave_defines.h  soundwave_spi.h
soundwave-esp/: .clang-format
soundwave-esp/include/: moving_avg_filter.h
soundwave-esp/src/: main.cpp  moving_avg_filter.cpp
soundwave-spi/: main.py  mise.toml  pyproject.toml
soundwave-spi/mopidy_soundwave_spi/: __init__.py  ext.conf  frontend.py
soundwave-web/: .gitignore  eslint.config.ts  index.html  main.py  moon.yml  package.json  pyproject.toml  tailwind.config.js  tsconfig.app.json  tsconfig.json  vite.config.mts
soundwave-web/mopidy_soundwave_web/: __init__.py  api.py  ext.conf  routing.py
soundwave-web/mopidy_soundwave_web/static/: index.html
soundwave-web/mopidy_soundwave_web/static/assets/: index-CoVavRel.js  index-DQZ-m-DM.css
soundwave-web/src/: App.vue  main.ts  types.ts
soundwave-web/src/assets/: main.css
soundwave-web/src/components/: NowPlayingCard.vue
soundwave-web/src/components/__tests__/: NowPlayingCard.spec.ts
soundwave-web/src/services/: mopidy.ts
soundwave-web/src/services/__tests__/: mopidy.spec.ts
soundwave-web/src/stores/: mopidy.ts
soundwave-web/src/stores/__tests__/: mopidy.spec.ts
