[build-system]
requires = ["uv_build>=0.7.16,<0.8.0"]
build-backend = "uv_build"

[project]
name = "Soundwave-SPI"
version = "0.1.0"
description = "SPI interface for Soundwave"
readme = "README.md"
requires-python = ">=3.11.2"
dependencies = [
    "mopidy>=3.4.2",
    "mopidy-local>=3.3.0",
    "pygobject>=3.52.3",
    "pykka>=4.2.0",
    "spidev>=3.7",
]

[project.scripts]
soundwave-spi = "mopidy_soundwave_spi:Extension"

[project.entry-points."mopidy.ext"]
soundwave-spi = "mopidy_soundwave_spi:Extension"

[dependency-groups]
dev = ["isort>=6.0.1", "pyright>=1.1.402", "ruff>=0.12.1"]

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "mopidy_soundwave_spi"
module-root = ""

[tool.ruff]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
known_tests = "tests"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER"
