[project]
name = "soundwave-web"
version = "0.1.0"
description = "Web frontend for Soundwave"
readme = "README.md"
requires-python = ">=3.11.13"
dependencies = []

[project.scripts]
soundwave-web = "mopidy_soundwave_web:Extension"

[project.entry-points."mopidy.ext"]
soundwave-web = "mopidy_soundwave_web:Extension"
