[build-system]
requires = ["uv_build>=0.7.16,<0.8.0"]
build-backend = "uv_build"
# requires = ["setuptools", "setuptools-scm"]
# build-backend = "setuptools.build_meta"

[project]
name = "Soundwave-Web"
version = "0.1.0"
description = "Web frontend for Soundwave"
readme = "README.md"
requires-python = ">=3.11.13"
dependencies = [
  "mopidy>=3.4.2",
  "mopidy-local>=3.3.0",
  "pygobject>=3.52.3",
  "pykka>=4.2.0",
  "setuptools>=80.9.0",
]

[project.scripts]
soundwave-web = "mopidy_soundwave_web:Extension"

[project.entry-points."mopidy.ext"]
soundwave-web = "mopidy_soundwave_web:Extension"

[dependency-groups]
dev = ["isort>=6.0.1", "pyright>=1.1.402", "ruff>=0.12.1"]

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "mopidy_soundwave_web"
module-root = ""

[tool.ruff]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
known_tests = "tests"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER"
